src/assets/experiments/tornado.css
/*html,
:not(body):not(#wrapper):not(#main):not(#content):not(.fusion-footer)*/
* {
	transition: transform 10s;
	transform: rotate(180deg);
	overflow: visible;
}
:host, ::slotted(*) {
	transition: transform 10s;
	transform: rotate(180deg);
}
#experiments, nav > ul > li ul {
	transform: none !important;
}
html, body, dy-page {
	transition-duration: 1s !important;
}
html {
	margin-bottom: 50vh;
}

